Fix typo overriden -> overridden in multiple places

--- a/man/deb-extra-override.5
+++ b/man/deb-extra-override.5
@@ -7,7 +7,7 @@ override
 .
 .SH DESCRIPTION
 While most information about a binary/source package can be found in the
-control/.dsc file, all of it can be overriden when it's exported to
+control/.dsc file, all of it can be overridden when it's exported to
 Packages/Sources files. The extra override file contains those overrides.
 .PP
 The extra override file has a simple whitespace-delimited format. Comments are
@@ -24,7 +24,7 @@ allowed (denoted with a
 is the name of the binary/source package.
 .PP
 .I field\-name
-is the name of the field that is overriden.
+is the name of the field that is overridden.
 .I value
 is the value to put in the field. It can contain spaces as the line is split
 in no more than 3 columns when it's parsed.
