--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -236,7 +236,7 @@ yet.
 .TP
 .B CFLAGS
 Optimization options which are passed to the Debian build system and
-can/should be overriden by the package build if needed (default value:
+can/should be overridden by the package build if needed (default value:
 .BR "\-g \-O2" ,
 or
 .BR \-g\ \-O0
@@ -274,7 +274,7 @@ for Fortran sources.
 .TP
 .B CPPFLAGS
 Preprocessor flags which are passed to the Debian build system and
-can/should be overriden by the package build if needed (default:
+can/should be overridden by the package build if needed (default:
 empty). This macro is seldom used (most build systems just use
 .B CFLAGS
 instead of
