--- a/man/po/pt_BR.po
+++ b/man/po/pt_BR.po
@@ -1088,7 +1088,7 @@ msgstr ""
 #: deb-extra-override.5:12
 msgid ""
 "While most information about a binary/source package can be found in the "
-"control/.dsc file, all of it can be overriden when it's exported to Packages/"
+"control/.dsc file, all of it can be overridden when it's exported to Packages/"
 "Sources files. The extra override file contains those overrides."
 msgstr ""
 
@@ -1113,7 +1113,7 @@ msgstr ""
 #. type: Plain text
 #: deb-extra-override.5:31
 msgid ""
-"I<field-name> is the name of the field that is overriden.  I<value> is the "
+"I<field-name> is the name of the field that is overridden.  I<value> is the "
 "value to put in the field. It can contain spaces as the line is split in no "
 "more than 3 columns when it's parsed."
 msgstr ""
@@ -4429,7 +4429,7 @@ msgstr ""
 #: dpkg-architecture.1:283
 msgid ""
 "All these files have to be present for B<dpkg-architecture> to work. Their "
-"location can be overriden at runtime with the environment variable "
+"location can be overridden at runtime with the environment variable "
 "DPKG_DATADIR."
 msgstr ""
 
@@ -5092,7 +5092,7 @@ msgstr "B<COLUMNS>"
 #: dpkg-buildpackage.1:249
 msgid ""
 "Optimization options which are passed to the Debian build system and can/"
-"should be overriden by the package build if needed (default value: B<-g -"
+"should be overridden by the package build if needed (default value: B<-g -"
 "O2>, or B<-g\\ -O0> if B<noopt> is specified in DEB_BUILD_OPTIONS). "
 "Overriding options can be used to explicitely set a higher optimization "
 "level, or work around compiler bugs, which only can be seen with some "
@@ -5167,7 +5167,7 @@ msgstr ""
 #: dpkg-buildpackage.1:282
 msgid ""
 "Preprocessor flags which are passed to the Debian build system and can/"
-"should be overriden by the package build if needed (default: empty). This "
+"should be overridden by the package build if needed (default: empty). This "
 "macro is seldom used (most build systems just use B<CFLAGS> instead of "
 "B<CPPFLAGS>)."
 msgstr ""
