--- a/man/dpkg-architecture.1
+++ b/man/dpkg-architecture.1
@@ -278,7 +278,7 @@ dpkg\-architecture \-ai386 \-ilinux\-any
 .
 .SH FILES
 All these files have to be present for \fBdpkg-architecture\fP to
-work. Their location can be overriden at runtime with the environment
+work. Their location can be overridden at runtime with the environment
 variable DPKG_DATADIR.
 .TP
 .I /usr/share/dpkg/cputable
