--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -1356,7 +1356,7 @@ msgstr "deb-extra-override - plik dodatkowych nadpisań archiwum Debiana"
 #: deb-extra-override.5:12
 msgid ""
 "While most information about a binary/source package can be found in the "
-"control/.dsc file, all of it can be overriden when it's exported to Packages/"
+"control/.dsc file, all of it can be overridden when it's exported to Packages/"
 "Sources files. The extra override file contains those overrides."
 msgstr ""
 "Większość informacji o binarnym lub źródłowym pakiecie może być zawarta w "
@@ -1386,7 +1386,7 @@ msgstr "I<pakiet> jest nazwą binarnego lub źródłowego pakietu."
 #. type: Plain text
 #: deb-extra-override.5:31
 msgid ""
-"I<field-name> is the name of the field that is overriden.  I<value> is the "
+"I<field-name> is the name of the field that is overridden.  I<value> is the "
 "value to put in the field. It can contain spaces as the line is split in no "
 "more than 3 columns when it's parsed."
 msgstr ""
@@ -5092,7 +5092,7 @@ msgstr "dpkg-architecture -ai386 -ilinux-any"
 #: dpkg-architecture.1:283
 msgid ""
 "All these files have to be present for B<dpkg-architecture> to work. Their "
-"location can be overriden at runtime with the environment variable "
+"location can be overridden at runtime with the environment variable "
 "DPKG_DATADIR."
 msgstr ""
 "Wszystkie te pliki muszą być obecne, aby B<dpkg-architecture> w ogóle "
@@ -5867,7 +5867,7 @@ msgstr "B<CFLAGS>"
 #: dpkg-buildpackage.1:249
 msgid ""
 "Optimization options which are passed to the Debian build system and can/"
-"should be overriden by the package build if needed (default value: B<-g -"
+"should be overridden by the package build if needed (default value: B<-g -"
 "O2>, or B<-g\\ -O0> if B<noopt> is specified in DEB_BUILD_OPTIONS). "
 "Overriding options can be used to explicitly set a higher optimization "
 "level, or work around compiler bugs, which only can be seen with some "
@@ -5952,7 +5952,7 @@ msgstr "B<CPPFLAGS>"
 #: dpkg-buildpackage.1:282
 msgid ""
 "Preprocessor flags which are passed to the Debian build system and can/"
-"should be overriden by the package build if needed (default: empty). This "
+"should be overridden by the package build if needed (default: empty). This "
 "macro is seldom used (most build systems just use B<CFLAGS> instead of "
 "B<CPPFLAGS>)."
 msgstr ""
