dpkg-gencontrol: don't accept arch-specific dependencies in arch: all packages
Since an architecture all package is shared on all architectures, its
dependency lines can't be simplified with the knowledge of the current host
architecture.

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * While parsing diff's output, accept any sentence that contains the word
     differ (as specified by POSIX) to identify that binary files could not be
     compared. Closes: #570008
+  * dpkg-gencontrol does no longer accept arch-specific dependencies in
+    arch: all packages. Closes: #560071
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
