--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     compared. Closes: #570008
   * dpkg-gencontrol does no longer accept arch-specific dependencies in
     arch: all packages. Closes: #560071
+  * dpkg-gencontrol no longer warns if a substitution variable provided by -V
+    is not used (the warning is meant to catch unused substitutions coming
+    from the file, those are package specific with debhelper). Closes: #557133
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
