dpkg-buildpackage: support passing arbitrary options to dpkg-source/dpkg-genchanges

--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -207,6 +207,12 @@ Do not sign the \fB.changes\fP file.
 .RS
 Passed unchanged to \fBdpkg\-source\fP. See its manual page.
 .RE
+.TP
+.BI \-\-source\-option= opt
+Pass option \fIopt\fP to \fBdpkg-source\fP.
+.TP
+.BI \-\-changes\-option= opt
+Pass option \fIopt\fP to \fBdpkg-genchanges\fP.
 .P
 .BI \-\-admindir= dir
 .br
