--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -48,6 +48,8 @@ Read substitution variables in
 .IR substvarsfile ;
 the default is
 .BR debian/substvars .
+This option can be used multiple times to read substitution variables from
+multiple files.
 .TP
 .BI \-D field = value
 Override or add an output control file field.
