dpkg-source: new option --create-empty-orig in formats "2.0" and "3.0 (quilt)"
With this option, dpkg-source will auto-create the main original tarball
when it's missing and when there are supplementary tarballs. This makes it
easier to bundle multiple software together.

dpkg-source needs to be modified since the options have to be parsed
before can_build() is called.

--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -476,6 +476,12 @@ be generated. Instead the current diff with upstream should be stored in a
 single patch. When using this option, it is recommended to create
 a debian/source/patch-header file explaining how the Debian changes can be
 best reviewed, for example in the VCS that is used.
+.TP
+.B \-\-create\-empty\-orig
+Automatically create the main original tarball as empty if it's missing
+and if there are supplementary original tarballs. This option is meant to
+be used when the source package is just a bundle of multiple upstream
+software and where there's no "main" software.
 
 .PP
 .B Extract options
