--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,10 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * The -T option of dpkg-{source,gencontrol,genchanges} can now be used
     multiple times to read substitution variables from multiple files.
     Closes: #363323
+  * dpkg-source now supports an option --create-empty-orig in formats
+    "2.0" and "3.0 (quilt)" to auto-create the main original tarball when
+    there are supplementary tarballs. This makes it easier to bundle
+    multiple software together. Closes: #554488
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
