Add dpkg-gensymbols.1 to the translatable man page set
and update all po files accordingly.

--- a/debian/changelog
+++ b/debian/changelog
@@ -112,6 +112,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
     for the report and patch.
 
+  [ Helge Kreutzmann ]
+  * Add dpkg-gensymbols.1 to the translatable man page set.
+
   [ Updated dpkg translations ]
   * French (Christian PERRIER).
   * German (Sven Joachim).
