Update German scripts translation
Update to 499t.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-01-03 16:30+0100\n"
-"PO-Revision-Date: 2010-02-21 09:56+0100\n"
+"PO-Revision-Date: 2010-02-21 22:54+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -195,6 +195,10 @@ msgid ""
 "  -ap            add pause before starting signature process.\n"
 "  -i[<regex>]    ignore diffs of files matching regex.    } only passed\n"
 "  -I[<pattern>]  filter out files when building tarballs. } to dpkg-source\n"
+"  --source-option=<opt>\n"
+"\t\t pass option <opt> to dpkg-source\n"
+"  --changes-option=<opt>\n"
+"\t\t pass option <opt> to dpkg-genchanges\n"
 "  --admindir=<directory>\n"
 "                 change the administrative directory.\n"
 "  -h, --help     show this help message.\n"
@@ -246,6 +250,10 @@ msgstr ""
 "  -i[<Regaus>]   ignoriere Diffs von auf Regaus passenden Dateien.} nur an\n"
 "  -I[<Muster>]   Dateien beim Tarball-Bauen herausfiltern.} dpkg-source\n"
 "                                                          } weitergegeben\n"
+"  --source-option=<Opt>\n"
+"\t\t übergebe Option <opt> an dpkg-source\n"
+"  --changes-option=<Opt>\n"
+"\t\t übergebe Option <opt> an dpkg-genchanges\n"
 "  --admindir=<Verz>\n"
 "                 ändere das administrative Verzeichnis.\n"
 "  -h, --help     zeigt diese Hilfemeldung.\n"
