Use mkdtemp and path_make_temp_template instead of tempnam and tmpnam
Those two functions are deprecated, produce warnings at link time,
and should not be used as they are cause of possible race conditions.

As a side effect we don't need to ensure the path is not existing as
mkdtemp has done that for us, which slightly simplifies the code.

--- a/debian/changelog
+++ b/debian/changelog
@@ -108,6 +108,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Update debian/copyright.
   * Use Debian instead of ‘Debian GNU/Linux’ when referring to the
     distribution.
+  * On dpkg --no-act with --install, --unpack or --record-avail, and
+    dpkg-deb --info or --field use mkdtemp() to create a temporary directory
+    instead of insecure tempnam() or tmpnam() functions.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
