Remove --license and --licence options from tools
The options are pretty useless and non-standard. The user can surely
cat a file from the installed package. In addition this option has not
worked ever on non-Debian systems as it's relying on the GPL-2 file
from the base-files Debian package. So remove it, and we get some code
reduction as a nice side-effect.

--- a/debian/changelog
+++ b/debian/changelog
@@ -111,6 +111,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * On dpkg --no-act with --install, --unpack or --record-avail, and
     dpkg-deb --info or --field use mkdtemp() to create a temporary directory
     instead of insecure tempnam() or tmpnam() functions.
+  * Remove --license and --licence options from tools.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
