--- a/man/dselect.1
+++ b/man/dselect.1
@@ -8,7 +8,6 @@ dselect \- Debian package management frontend
 .IR <directory> ]
 .RB [ \-\-help ]
 .RB [ \-\-version ]
-.RB [ \-\-licence | \-\-license ]
 .RB [ \-\-expert ]
 .RB [ \-\-debug | \-D\fI<file>\fP ]
 .RI [ <action> ]
@@ -122,10 +121,6 @@ blink, bright, dim, bold
 .TP
 .B \-\-help
 Print a brief help text and exit successfully.
-.TP
-.BR \-\-licence | \-\-license
-Displays the \fBdselect\fP copyright and license information and exits
-successfully.
 .TP
 .B \-\-version
 Print version information and exit successfully.
@@ -457,7 +452,7 @@ broken, it is also much more flexible than the built in access methods.
 .SH AUTHORS
 .B dselect
 was written by Ian Jackson (ijackson@gnu.ai.mit.edu). Full list of
-contributors may be found in `dselect \-\-license'.
+contributors may be found in 'dselect \-\-version'.
 .br
 This manual page was written by Juho Vuori <javuori@cc.helsinki.fi>,
 Josip Rodin and Joost kooij.
