--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     "2.0" and "3.0 (quilt)" to auto-create the main original tarball when
     there are supplementary tarballs. This makes it easier to bundle
     multiple software together. Closes: #554488
+  * dpkg-source supports long option names --diff-ignore and --tar-ignore for
+    -i and -I. A new option --extend-diff-ignore is introduced. Those options
+    can thus now be used in debian/source/options.
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
