Dpkg::BuildOptions: provide an object oriented interface
Also update the test-suite and dpkg-buildpackage to match the new API.
Increase $VERSION to 1.00 since it's supposed to be a stable API now.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
       there management of default compression
     - introduce Dpkg::Interface::Storable and update many modules
       to make use of it
+    - update Dpkg::BuildOptions to provide an object-oriented interface
   * Drop debian-maintainers from Suggests since it's obsolete, the
     corresponding keyring is in debian-keyring.
   * Merge support of symbol patterns in dpkg-gensymbols. Thanks to
