Use Debian instead of Debian GNU/Linux when referring to the distribution

--- a/debian/changelog
+++ b/debian/changelog
@@ -106,6 +106,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Add support for disabling install-info at configure time using
     --withouth-install-info.
   * Update debian/copyright.
+  * Use Debian instead of ‘Debian GNU/Linux’ when referring to the
+    distribution.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
