libdpkg: Change default lzma compression level from 9 to 6
Set the default compression level low enough to produce packages
that require no more than 10 MiB of memory to decompress, by
lowering it to 6 from 9 (this matches xz internal default compression
level).

Based-on-patch-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -113,6 +113,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     instead of insecure tempnam() or tmpnam() functions.
   * Remove --license and --licence options from tools.
   * Securely remove newly installed files when rolling-back a failed unpack.
+  * Change default lzma compression level from 9 to 6.
+    Thanks to Jonathan Nieder for the initial patch.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
