Use xz-utils instead of lzma for the lzma compression format
We avoid unneeded dependencies on lzma in dpkg and dpk-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -118,6 +118,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Add support for xz compressed data.tar member of binary packages. Add
     xz-utils to dpkg's Pre-Depends. Closes: #542160
     Thanks to Jonathan Nieder for the initial patch.
+  * Use xz command to handle lzma compressed files in dpkg and dpkg-dev.
+    This removes the lzma package from both dpkg and dpkg-dev dependencies.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
