Reorganize the doc contents that goes into each package
README.multicd only in dselect.
README.api only in development packages, dpkg-dev and libdpkg-dev.
triggers.txt only in dpkg-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -130,6 +130,10 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     LIBDPKG_VOLATILE_API to acknowledge that fact.
   * Add a new libdpkg-dev package with the headers and the static library,
     although its API should be considered volatile.
+  * Reorganize the doc contents that goes into each package:
+    - README.multicd only in dselect.
+    - README.api only in development packages, dpkg-dev and libdpkg-dev.
+    - triggers.txt only in dpkg-dev.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
