Move source.lintian-overrides to debian/source/lintian-overrides

--- a/debian/changelog
+++ b/debian/changelog
@@ -134,6 +134,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     - README.multicd only in dselect.
     - README.api only in development packages, dpkg-dev and libdpkg-dev.
     - triggers.txt only in dpkg-dev.
+  * Move source.lintian-overrides to debian/source/lintian-overrides.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
