Dpkg::Checksums: rewrite to provide an object-oriented API
Many other modules and scripts are also updated to cope with the new API.
The API of the module should be stable from now on, hence increased
$VERSION to "1.00".

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     - introduce Dpkg::Interface::Storable and update many modules
       to make use of it
     - update Dpkg::BuildOptions to provide an object-oriented interface
+    - update Dpkg::Checksums to provide an object-oriented interface
   * Drop debian-maintainers from Suggests since it's obsolete, the
     corresponding keyring is in debian-keyring.
   * Merge support of symbol patterns in dpkg-gensymbols. Thanks to
