--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * dpkg-source supports long option names --diff-ignore and --tar-ignore for
     -i and -I. A new option --extend-diff-ignore is introduced. Those options
     can thus now be used in debian/source/options.
+  * Generate manual pages for perl modules.
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
