--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Generate manual pages for perl modules.
   * Introduce the libdpkg-perl package and clarify its status in README.api.
   * Update Standards-Version to 3.8.4 (no changes needed).
+  * Drop unused lintian override for arch-dep-package-has-big-usr-share on
+    dselect.
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
