--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     can thus now be used in debian/source/options.
   * Generate manual pages for perl modules.
   * Introduce the libdpkg-perl package and clarify its status in README.api.
+  * Update Standards-Version to 3.8.4 (no changes needed).
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
