Add missing bug closure
The rewrite of Dpkg::Checksums fixed a bug which has just been reported
as #572030. It was not able to deal with filenames with spaces.

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Update Standards-Version to 3.8.4 (no changes needed).
   * Drop unused lintian override for arch-dep-package-has-big-usr-share on
     dselect.
+  * The rewritten Dpkg::Checksums deals properly with filenames with
+    spaces. Closes: #572030
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
