dpkg: Switch SE Linux support to explicitly set path contexts
The current code sets the default context and does not clean it on
conffile extraction or in case of unpack error, which causes the wrong
context to be applied to files under <admindir>.

Switch the code to explicitly set the path context for newly extracted
and created files so that we don't need to care about unpack error
recovery or conffile extraction to restore the default context.

Refactor the code into a new function and remove an unneeded setting of
the context just before the rename from <node>.dpkg-new to <node>.

Closes: #498438

--- a/debian/changelog
+++ b/debian/changelog
@@ -145,6 +145,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     - README.api only in development packages, dpkg-dev and libdpkg-dev.
     - triggers.txt only in dpkg-dev.
   * Move source.lintian-overrides to debian/source/lintian-overrides.
+  * Switch SE Linux support to explicitly set path context. This fixes the
+    mislabeling of files under <admindir> on conffile extraction or on unpack
+    errors, due to improper default context restoration. Closes: #498438
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
