dpkg-source: do not fallback to other source formats
When the prerequesites of the current source format are not met,
simply error out instead of trying to fallback to other source formats.

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     dselect.
   * The rewritten Dpkg::Checksums deals properly with filenames with
     spaces. Closes: #572030
+  * dpkg-source does no longer fallback to other source formats if the
+    requested one is not usable. Closes: #557459
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
