--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2010-03-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.29.
+
+2010-03-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Patch.pm (analyze): sanity check
+	the paths inside the diff and error out if some path contain
+	"/../". Also forbid patches modifying files through a symlink.
+	* scripts/Dpkg/Source/Package/V3/quilt.pm: error out if the series
+	files contains insecure paths with "/../".
+
 2010-01-03  Raphael Hertzog  <hertzog@debian.org>
 
 	* configure.ac: Release 1.14.28.
