--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.29) UNRELEASED; urgency=low
+dpkg (1.14.29) stable-security; urgency=high
 
   * Modify dpkg-source to error out when it would apply patches containing
     insecure paths (with "/../") and also error out when it would apply a
@@ -10,7 +10,7 @@ dpkg (1.14.29) UNRELEASED; urgency=low
     can cause patch to create files outside of the source package due
     to the -B .pc/$path option that it gets.
 
- -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Mar 2010 20:41:39 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Mar 2010 22:25:05 +0100
 
 dpkg (1.14.28) stable; urgency=low
 
