man: Document environment variables affecting dpkg-deb, dpkg and dselect
The missing undocumented variables are TMPDIR for dpkg and dpkg-deb,
HOME for dselect and dpkg and PAGER for dpkg.

Closes: #572836

--- a/man/dpkg-deb.1
+++ b/man/dpkg-deb.1
@@ -1,4 +1,4 @@
-.TH dpkg\-deb 1 "2009-01-07" "Debian Project" "dpkg suite"
+.TH dpkg\-deb 1 "2010-03-07" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-deb \- Debian package archive (.deb) manipulation tool
 .
@@ -215,6 +215,12 @@ any archive you want, no matter how broken, this way.
 .TP
 .BR \-D ", " \-\-debug
 Enables debugging output. This is not very interesting.
+.
+.SH ENVIRONMENT
+.TP
+.B TMPDIR
+If set, \fBdpkg\-deb\fP will use it as the directory in which to create
+temporary files and directories.
 .
 .SH BUGS
 .B dpkg\-deb \-I
