--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -1,4 +1,4 @@
-.TH dpkg 1 "2010-02-20" "Debian Project" "dpkg suite"
+.TH dpkg 1 "2010-03-07" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg \- package manager for Debian
 .
@@ -609,6 +609,17 @@ for more information about them:
 .I postrm
 .
 .SH ENVIRONMENT VARIABLES
+.TP
+.B HOME
+If set, \fBdpkg\fP will use it as the directory from which to read the user
+specific configuration file.
+.TP
+.B TMPDIR
+If set, \fBdpkg\fP will use it as the directory in which to create
+temporary files and directories.
+.TP
+.B PAGER
+The program \fBdpkg\fP will execute when displaying the conffiles.
 .TP
 .B SHELL
 The program \fBdpkg\fP will execute when starting a new shell.
