--- a/man/dselect.1
+++ b/man/dselect.1
@@ -1,4 +1,4 @@
-.TH dselect 1 "2009-08-20" "Debian Project" "Debian"
+.TH dselect 1 "2010-03-07" "Debian Project" "Debian"
 .SH NAME
 dselect \- Debian package management frontend
 .
@@ -426,6 +426,12 @@ This is somewhat similar to using the unhold command on all packages,
 but provides a more obvious panic button in cases where the user
 pressed \fBenter\fP by accident.
 .sp
+.
+.SH ENVIRONMENT
+.TP
+.B HOME
+If set, \fBdselect\fP will use it as the directory from which to read the
+user specific configuration file.
 .
 .SH BUGS
 The
