--- a/debian/changelog
+++ b/debian/changelog
@@ -158,6 +158,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     guarantees when doing rename(2). Based on a patch by
     Jean-Baptiste Lallement <jeanbaptiste.lallement@gmail.com>.
     Closes: #430958
+  * Document in the man page the effects of setting TMPDIR for dpkg and
+    dpkg-deb, HOME for dselect and dpkg and PAGER for dpkg. Closes: #572836
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
