man: Remove "VARIABLES" from "ENVIRONMENT" section name
Unify with the rest of the man pages and use the most commonly used
section name.

--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2009-06-13" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2010-03-07" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -12,7 +12,7 @@ is a program that automates the process of building a Debian package. It
 consists of the following steps:
 .IP \fB1.\fP 3
 It prepares the build environment by setting various environment
-variables (see \fBENVIRONMENT VARIABLES\fP).
+variables (see \fBENVIRONMENT\fP).
 .IP \fB2.\fP 3
 It checks that the build-dependencies and build-conflicts
 are satisfied (unless \fB\-d\fP is specified).
@@ -228,7 +228,7 @@ Show the usage message and exit.
 .BR \-\-version
 Show the version and exit.
 .
-.SH ENVIRONMENT VARIABLES
+.SH ENVIRONMENT
 .SS Variables set by dpkg-architecture
 \fBdpkg\-architecture\fP is called with the \fB\-a\fP and \fB\-t\fP
 parameters forwarded. Any variable that is output by its \fB\-s\fP
