--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -608,7 +608,7 @@ for more information about them:
 .TP
 .I postrm
 .
-.SH ENVIRONMENT VARIABLES
+.SH ENVIRONMENT
 .TP
 .B HOME
 If set, \fBdpkg\fP will use it as the directory from which to read the user
