--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -1,4 +1,4 @@
-.TH dpkg\-query 1 "2009-09-06" "Debian Project" "dpkg suite"
+.TH dpkg\-query 1 "2010-03-07" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-query \- a tool to query the dpkg database
 .
@@ -151,6 +151,13 @@ run:
 .nf
   \fBdpkg\-query \-W \-f=\(aq${Package} ${Version}\\t${Maintainer}\\n\(aq dpkg\fP
 .fi
+.
+.SH "EXIT STATUS"
+.IP 0
+The requested query was successfully performed.
+.IP 1
+Problems were encountered while parsing the command line or performing the
+query, including no file or package being found (except for \-\-control\-path).
 .
 .SH ENVIRONMENT
 .TP
