man: Document “dpkg-query -l” abbreviated state information
Closes: #383869

Based-on-patch-by: Marc-Jano Knopp <pub_br_debian.org@marc-jano.de>

--- a/debian/changelog
+++ b/debian/changelog
@@ -161,6 +161,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Document in the man page the effects of setting TMPDIR for dpkg and
     dpkg-deb, HOME for dselect and dpkg and PAGER for dpkg. Closes: #572836
   * Document the exit codes for dpkg-query. Closes: #571798
+  * Document “dpkg-query -l” abbreviated state information in the man page.
+    Based on a patch by Marc-Jano Knopp <pub_br_debian.org@marc-jano.de>.
+    Closes: #383869
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
