Correct a minor grammar issue

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2010-02-20 06:01+0000\n"
-"PO-Revision-Date: 2010-02-21 10:14+0100\n"
+"PO-Revision-Date: 2010-03-07 22:17+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -7677,7 +7677,7 @@ msgstr ""
 msgid ""
 "When the generated symbols files differ from the maintainer supplied one, "
 "B<dpkg-gensymbols> will print a diff between the two versions.  Furthermore "
-"if the difference are too significant, it will even fail (you can customize "
+"if the difference is too significant, it will even fail (you can customize "
 "how much difference you can tolerate, see the B<-c> option)."
 msgstr ""
 
