--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-21 11:26+0000\n"
-"PO-Revision-Date: 2010-03-07 13:54+0100\n"
+"PO-Revision-Date: 2010-03-07 22:18+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -7540,7 +7540,7 @@ msgstr ""
 msgid ""
 "When the generated symbols files differ from the maintainer supplied one, "
 "B<dpkg-gensymbols> will print a diff between the two versions.  Furthermore "
-"if the difference are too significant, it will even fail (you can customize "
+"if the difference is too significant, it will even fail (you can customize "
 "how much difference you can tolerate, see the B<-c> option)."
 msgstr ""
 "När den genererade symbolfilen skiljer sig mot den version som "
