--- a/man/po/dpkg-man.pot
+++ b/man/po/dpkg-man.pot
@@ -6154,7 +6154,7 @@ msgstr ""
 msgid ""
 "When the generated symbols files differ from the maintainer supplied one, "
 "B<dpkg-gensymbols> will print a diff between the two versions.  Furthermore "
-"if the difference are too significant, it will even fail (you can customize "
+"if the difference is too significant, it will even fail (you can customize "
 "how much difference you can tolerate, see the B<-c> option)."
 msgstr ""
 
