--- a/man/po/es.po
+++ b/man/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2010-02-21 11:26+0000\n"
-"PO-Revision-Date: 2009-10-29 20:10+0100\n"
+"PO-Revision-Date: 2010-03-07 22:17+0100\n"
 "Last-Translator: Rubén Porras <nahoo@inicia.es>\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -7444,7 +7444,7 @@ msgstr ""
 msgid ""
 "When the generated symbols files differ from the maintainer supplied one, "
 "B<dpkg-gensymbols> will print a diff between the two versions.  Furthermore "
-"if the difference are too significant, it will even fail (you can customize "
+"if the difference is too significant, it will even fail (you can customize "
 "how much difference you can tolerate, see the B<-c> option)."
 msgstr ""
 
