Update Swedish translation.
dselect/po/sv.po: 277t0f0u.
po/sv.po: 973t0f0u.
scripts/po/sv.po: 496t0f0u.

--- a/dselect/po/sv.po
+++ b/dselect/po/sv.po
@@ -1,6 +1,6 @@
 # Swedish translation of dpkg
-# Copyright © 1999-2009 Software in the Public Interest
-# Peter Krefting <peterk@debian.org>, 1999-2009.
+# Copyright © 1999-2010 Software in the Public Interest
+# Peter Krefting <peterk@debian.org>, 1999-2010.
 # Daniel Nylander <po@danielnylander.se>, 2006.
 #
 msgid ""
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dselect\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-08 12:15+0100\n"
-"PO-Revision-Date: 2009-10-14 07:47+0100\n"
+"PO-Revision-Date: 2010-03-08 13:37+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -832,14 +832,12 @@ msgstr ""
 "Copyright © 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:163
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "Detta program är fri programvara. Se GNU General Public License version 2\n"
 "eller senare för kopieringsvillkor. Det finns INGEN garanti.\n"
-"Se %s --licence för copyright och licensdetaljer.\n"
 
 #: dselect/main.cc:173 dselect/main.cc:221
 msgid "<standard output>"
@@ -874,7 +872,7 @@ msgstr ""
 "\n"
 
 #: dselect/main.cc:197
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "  --help                     Show this help message.\n"
 "  --version                  Show the version.\n"
@@ -882,7 +880,6 @@ msgid ""
 msgstr ""
 "  --help                     Visa detta hjälpmeddelande.\n"
 "  --version                  Visa versionsnummer.\n"
-"  --license | --licence      Visa licensen.\n"
 "\n"
 
 #: dselect/main.cc:202
@@ -1270,7 +1267,7 @@ msgstr "uppackat (ej konf.)"
 
 #: dselect/pkgdisplay.cc:54
 msgid "half configured (config failed)"
-msgstr ""
+msgstr "halvkonfigurerat (konf. misslyckad)"
 
 #: dselect/pkgdisplay.cc:55
 msgid "awaiting trigger processing"
